CircleCI integration - Selenium headless run